add Roland Quad-Capture support
Add Roland Quad-Capture support

--- a/ucm2/USB-Audio/USB-Audio.conf
+++ b/ucm2/USB-Audio/USB-Audio.conf
@@ -193,6 +193,15 @@ If.roland-bridgecastx {
 	True.Define.ProfileName "Roland/BridgeCastXV2"
 }
 
+If.roland-quadcapture {
+	Condition {
+		Type String
+		Haystack "${CardComponents}"
+		Needle "USB0582:012f"
+	}
+	True.Define.ProfileName "Roland/Quad-Capture"
+}
+
 If.motu-m246 {
 	Condition {
 		Type RegexMatch
